--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -1,4 +1,4 @@
 .main {
-  color: blue;
-  font-size: 20px;
+  background-image: url('http://mlb.mlb.com/mlb/images/devices/ballpark/1920x1080/1.jpg');
+  background-color: #D3D3D3;
 }
