--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -1,3 +1,8 @@
-.main {
-  background-image: url('http://mlb.mlb.com/mlb/images/devices/ballpark/1920x1080/1.jpg');
+.main_background {
+  /*background-image: url('http://mlb.mlb.com/mlb/images/devices/ballpark/1920x1080/1.jpg');*/
+}
+
+.game_container {
+  width: 500px;
+  height: 500px;
 }
