--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -5,25 +5,20 @@ body {
 
 .game_container {
   white-space: nowrap;
-  padding: 25% 0;
-}
-
-.selected_game_thumb {
-  display: inline-block;
-  color: white;
-  width: 250px;
-  height: 250px;
-  padding: 0 25px;
-  margin: 0 25px;
-  background-color: blue;
+  padding: 25% 2%;
 }
 
 .game_thumb {
+  text-align: center;
   display: inline-block;
   color: white;
   width: 200px;
-  height: 200px;
+  height: 150px;
   margin: 0 25px;
-  padding: 0 25px;
-  background-color: blue;
+  background-color: #D3D3D3;
+}
+
+#selected {
+  transform: scale(1.25);
+  background-color: #696969;
 }
