--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -13,7 +13,7 @@ body {
   display: inline-block;
   color: white;
   width: 200px;
-  height: 150px;
+  height: 100px;
   margin: 0 25px;
   background-color: #696969;
 }
@@ -21,4 +21,10 @@ body {
 #selected {
   transform: scale(1.25);
   background-color: #D3D3D3;
+  border: 2px solid white;
+  border-radius: 5px;
+}
+
+#error {
+  color: white;
 }
