--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -12,17 +12,32 @@ body {
   text-align: center;
   display: inline-block;
   color: white;
-  width: 200px;
+  width: 175px;
   height: 100px;
   margin: 0 25px;
+}
+
+.game_title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.game_img {
   background-color: #696969;
+  padding: 20px 0;
+}
+
+.game_details {
+  font-size: 14px;
 }
 
 #selected {
   transform: scale(1.25);
-  background-color: #D3D3D3;
-  border: 2px solid white;
+}
+
+#selected .game_img {
   border-radius: 5px;
+  background-color: #D3D3D3;
 }
 
 #error {
