--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -5,7 +5,7 @@ body {
 
 .game_container {
   white-space: nowrap;
-  padding: 25% 2%;
+  padding: 20% 2%;
 }
 
 .game_thumb {
@@ -29,6 +29,18 @@ body {
 
 .game_details {
   font-size: 14px;
+}
+
+.details_screen {
+  width: 250px;
+  height: 115px;
+  text-align: center;
+  border: 2px solid white;
+  position: absolute;
+}
+
+#hide_screen {
+  display: none;
 }
 
 #selected {
