add background style before img load

--- a/public/src/styles/main.css
+++ b/public/src/styles/main.css
@@ -1,6 +1,7 @@
 body {
   background-image: url('http://mlb.mlb.com/mlb/images/devices/ballpark/1920x1080/1.jpg');
   background-size: cover;
+  background-color: black;
 }
 
 .game_container {
